# top-down-hindley-milner

./: README.md  cabal.project  flake.nix  top-down-hindley-milner.cabal
app/: Main.hs
examples/: 2.expr  3.expr  4.expr  5.expr  6.expr  7.expr  8.expr
src/: Check.hs  Core.hs  Parse.hs  Syntax.hs  Type.hs
