cabal-version:      3.0
name:               top-down-hindley-milner
version:            0.1.0.0
license:            MIT
author:             Isaac Elliott
maintainer:         isaace71295@gmail.com
category:           Language
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Check
        Core
        Parse
        Syntax
        Type
    build-depends:    
        base ^>=4.16.3.0,
        containers,
        mtl,
        parsers,
        trifecta
    hs-source-dirs:   src
    default-language: Haskell2010

executable tdhm
    import:           warnings
    build-depends:    
        base ^>=4.16.3.0,
        diagnostica,
        optparse-applicative,
        text,
        top-down-hindley-milner
    hs-source-dirs:   app
    main-is:   Main.hs
    default-language: Haskell2010